--- a/sample/package.json
+++ b/sample/package.json
@@ -13,6 +13,7 @@
   "homepage": "https://github.intuit.com/abisalehalliprasan/oauth-jsclient",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^5.0.1",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
@@ -21,7 +22,8 @@
     "mysql": "^2.18.1",
     "ngrok": "^3.2.5",
     "path": "^0.12.7",
-    "snyk": "^1.316.1"
+    "snyk": "^1.316.1",
+    "superagent": "^5.2.2"
   },
   "snyk": true
 }
